--- a/res/layout/main_head.xml
+++ b/res/layout/main_head.xml
@@ -1,20 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/main_header" 
   	android:layout_width="fill_parent" 
   	android:layout_height="60dip"
   	android:background="@drawable/widget_head_bg">
   	
-    <ImageView
+    <ImageButton
     	android:id="@+id/main_head_logo"
   		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerVertical="true"
 		android:layout_alignParentLeft="true"
 		android:layout_marginLeft="5.0dip"
-		android:src="@drawable/main_head"/>
+		android:background="@drawable/main_head"/>
 		
-    
     <TextView 
         android:id="@+id/main_head_title"
         style="@style/main_head_title"
@@ -23,14 +21,6 @@
 		android:layout_marginLeft="5.0dip"
 		android:text="@string/app_name"/>
 	
-   	<ProgressBar 
-		android:id="@+id/main_head_progress" 
-		style="@style/loading_small"
-		android:layout_toRightOf="@id/main_head_title"
-		android:layout_centerVertical="true"
-		android:layout_marginLeft="5.0dip"
-		android:visibility="gone"/>
-    
     <ImageButton
     	android:id="@+id/main_head_add"
   		android:layout_width="wrap_content"
