--- a/res/layout/main_head.xml
+++ b/res/layout/main_head.xml
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/main_header" 
   	android:layout_width="fill_parent" 
-  	android:layout_height="60dip"
+  	android:layout_height="50dip"
   	android:background="@drawable/widget_head_bg">
   	
     <ImageButton
